tests/ui/statics/static-recursive.stderr
error[E0391]: cycle detected when evaluating initializer of static `L1`
  --> $DIR/static-recursive.rs:10:1
   |
LL | static L1: StaticDoubleLinked = StaticDoubleLinked { prev: &L3, next: &L2, data: 1, head: true };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires evaluating initializer of static `L3`...
  --> $DIR/static-recursive.rs:13:1
   |
LL | static L3: StaticDoubleLinked = StaticDoubleLinked { prev: &L2, next: &L1, data: 3, head: false };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires evaluating initializer of static `L2`...
  --> $DIR/static-recursive.rs:12:1
   |
LL | static L2: StaticDoubleLinked = StaticDoubleLinked { prev: &L1, next: &L3, data: 2, head: false };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires evaluating initializer of static `L1`, completing the cycle
   = note: cycle used when running analysis passes on crate `static_recursive`
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
